OCP-AT-DEPLOYMENT.yaml
##################################################################################################
# emart-backend-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: emart-backend-service
  labels:
    app: emart-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: 8080-http
    protocol: TCP
  selector:
    app: emart-backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emart-backend
  labels:
    app: emart-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: emart-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: emart-backend
        version: v1
    spec:
      containers:
      - name: emart-backend
        image: {imagePath}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: image-pull-secret
---
##################################################################################################
# emart-frontend-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: emart-frontend
  labels:
    app: emart-frontend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: 8080-http
  selector:
    app: emart-frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emart-frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: emart-frontend
        version: v1
    spec:
      containers:
      - name: emart-frontend
        image: {imagepath}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: image-pull-secret
---
##########create route #####
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: emart-frontend
  name: emart-frontend
spec: 
  port: 
    targetPort: 8080-http
  to:
    kind: Service
    name: emart-frontend
    weight: 100
